# SEM

./: README.md  deploy_policy.py  deploy_policy.yml  eval.sh  multi_train.sh  process_data.sh  requirements.txt  train.sh
robo_orchard_core/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  orchard_config.toml  pyproject.toml  setup.py
robo_orchard_core/docs/: Makefile  conf.py  index.jinja  readme.md
robo_orchard_core/docs/api/: index.rst
robo_orchard_core/docs/api/controllers/: index.rst
robo_orchard_core/docs/api/datatypes/: index.rst
robo_orchard_core/docs/api/envs/: index.rst  managers.rst
robo_orchard_core/docs/api/envs/managers/: actions.rst  events.rst  observations.rst
robo_orchard_core/docs/api/kinematics/: index.rst
robo_orchard_core/docs/api/utils/: config.rst  index.rst  logging.rst  math.rst
robo_orchard_core/docs/doc_gen/: index.py
robo_orchard_core/docs/gallery/get_started/installation/: GALLERY_HEADER.txt
robo_orchard_core/docs/gallery/tutorials/system_overview/: GALLERY_HEADER.txt  nonb-01_config_design.py  nonb-02_env_and_managers.py
robo_orchard_core/scm/lint/: code_lint_py.sh
robo_orchard_core/tests/: .coveragerc  Makefile
robo_orchard_core/tests/python/test_robo_orchard_core/: conftest.py
robo_orchard_core/tests/python/test_robo_orchard_core/datatypes/: test_adaptor.py  test_camera.py  test_geometry.py  test_joint_state.py
robo_orchard_core/tests/python/test_robo_orchard_core/kinematics/: test_chain.py
robo_orchard_core/tests/python/test_robo_orchard_core/utils/: test_config.py  test_math.py  test_task_executor.py
robo_orchard_lab/: setup.py
robo_orchard_lab/projects/sem/robotwin/: config_sem_robotwin.py  train.py
robo_orchard_lab/robo_orchard_lab/dataset/robotwin/: robotwin_packer.py
robo_orchard_lab/robo_orchard_lab/models/bip3d/: structure.py
robo_orchard_lab/robo_orchard_lab/models/modules/: swin_transformer.py
robo_orchard_lab/robo_orchard_lab/models/sem_modules/: action_decoder.py
robo_orchard_lab/robo_orchard_lab/pipeline/: hook_based_trainer.py  trainer.py
robo_orchard_lab/robo_orchard_lab/pipeline/hooks/: memory.py
